feat: setup weather API and tested

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/van3396/waether-app#readme",
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
+    "postman-request": "^2.88.1-postman.28"
   }
 }
